--- a/web_dielo/static/css/admin.css
+++ b/web_dielo/static/css/admin.css
@@ -120,3 +120,68 @@ button[type=submit]:hover, button[type=button]:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
+
+/* Estilos generales para el modal */
+.modal {
+    display: none; /* Oculto por defecto */
+    position: fixed; /* Fijo en la pantalla */
+    z-index: 1; /* Por encima de otros elementos */
+    left: 0;
+    top: 0;
+    width: 100%; /* Ancho completo */
+    height: 100%; /* Alto completo */
+    overflow: auto; /* Habilitar scroll si es necesario */
+    background-color: rgb(0,0,0); /* Color de fondo */
+    background-color: rgba(0,0,0,0.4); /* Fondo con opacidad */
+}
+
+/* Contenido del modal */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% desde la parte superior y centrado */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Ancho del 80% */
+    max-width: 500px; /* Máximo ancho */
+    border-radius: 10px; /* Bordes redondeados */
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3); /* Sombra */
+}
+
+/* Botones dentro del modal */
+.modal-content button {
+    background-color: #4CAF50; /* Verde */
+    color: white;
+    padding: 10px 20px;
+    margin: 10px 5px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px; /* Bordes redondeados */
+    font-size: 16px;
+}
+
+/* Botón de cerrar */
+.modal-content button[type="button"] {
+    background-color: #f44336; /* Rojo */
+}
+
+/* Botón de cerrar al pasar el mouse */
+.modal-content button[type="button"]:hover {
+    background-color: #d32f2f;
+}
+
+/* Botones de acción al pasar el mouse */
+.modal-content button[type="submit"]:hover {
+    background-color: #45a049;
+}
+
+/* Entrada de texto */
+.modal-content input[type="number"] {
+    width: calc(100% - 22px); /* Ancho completo menos el padding */
+    padding: 10px;
+    margin: 10px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 5px; /* Bordes redondeados */
+    box-sizing: border-box;
+    font-size: 16px;
+}
