--- a/web_dielo/templates/admin.html
+++ b/web_dielo/templates/admin.html
@@ -107,58 +107,34 @@
     });
 }
 
-    function confirmarRetiro() {
-        var salesNumber = document.getElementById('salesNumber').value;
-        var username = document.getElementById('username').value;
-        var form = document.createElement('form');
-        form.method = 'POST';
-        form.action = '/confirmsale';
+function confirmarRetiro() {
+    const salesNumber = document.getElementById('salesNumber').value;
+    const username = document.getElementById('username').value;
+    console.log('Confirmando retiro:', salesNumber, 'para el usuario:', username);
 
-        var inputSalesNumber = document.createElement('input');
-        inputSalesNumber.type = 'hidden';
-        inputSalesNumber.name = 'salesNumber';
-        inputSalesNumber.value = salesNumber;
-        form.appendChild(inputSalesNumber);
-
-        var inputUsername = document.createElement('input');
-        inputUsername.type = 'hidden';
-        inputUsername.name = 'username';
-        inputUsername.value = username;
-        form.appendChild(inputUsername);
-
-        document.body.appendChild(form);
-        form.submit();
-    }
-</script>
-
-    function confirmarRetiro() {
-        var salesNumber = document.getElementById('salesNumber').value;
-        var username = document.getElementById('username').value;
-        var form = document.createElement('form');
-        form.method = 'POST';
-        form.action = '/confirmsale';
-
-        var inputSalesNumber = document.createElement('input');
-        inputSalesNumber.type = 'hidden';
-        inputSalesNumber.name = 'salesNumber';
-        inputSalesNumber.value = salesNumber;
-        form.appendChild(inputSalesNumber);
-
-        var inputUsername = document.createElement('input');
-        inputUsername.type = 'hidden';
-        inputUsername.name = 'username';
-        inputUsername.value = username;
-        form.appendChild(inputUsername);
-
-        var inputAction = document.createElement('input');
-        inputAction.type = 'hidden';
-        inputAction.name = 'action';
-        inputAction.value = 'confirmar_retiro';
-        form.appendChild(inputAction);
-
-        document.body.appendChild(form);
-        form.submit();
-    }
+    fetch('/confirmsale', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/x-www-form-urlencoded',
+        },
+        body: new URLSearchParams({
+            'salesNumber': salesNumber,
+            'username': username
+        })
+    })
+    .then(response => response.json())
+    .then(data => {
+        if (data.message) {
+            document.getElementById('resultMessage').innerText = data.message;
+        } else {
+            document.getElementById('resultMessage').innerText = 'Error al confirmar el retiro';
+        }
+    })
+    .catch(error => {
+        console.error('Error:', error);
+        document.getElementById('resultMessage').innerText = 'Error al confirmar el retiro';
+    });
+}
 </script>
 </body>
 </html>
