--- a/web_dielo/templates/admin.html
+++ b/web_dielo/templates/admin.html
@@ -34,6 +34,10 @@
             <h3>Manga más vendido</h3>
             <p>{{ most_sold }}</p>
         </div>
+        <div class="sales-item">
+            <h3>Ventas mangas eliminados</h3>
+            <p>{{ erased_mangas }}</p>
+        </div>
     </div>
     <div id="highlightContent" class="grid-container">
         {% for manga in mangas %}
