--- a/web_dielo/templates/sales.html
+++ b/web_dielo/templates/sales.html
@@ -32,9 +32,7 @@
   <body>
     <nav>
       <ul>
-        <li>
-          <form action="/logout"><button type="submit">Cerrar sesión</button></form>
-        </li>
+        <li><form action="/admin"><button type="submit">Inicio</button></form></li>
         <li>
           <form action="/notificar">
             <button type="submit">Notificar contenido destacado</button>
@@ -58,6 +56,10 @@
           >
             Comprobar Venta
           </button>
+        </li>
+        <li><form action="/sales"><button type="submit">Ventas</button></form></li>
+        <li>
+          <form action="/logout"><button type="submit">Cerrar sesión</button></form>
         </li>
       </ul>
     </nav>
