--- a/web_dielo/templates/admin.html
+++ b/web_dielo/templates/admin.html
@@ -8,11 +8,15 @@
 <body>
     <nav>
         <ul>
-            <li><form action="/logout"><button type="submit">Cerrar sesión</button></form></li>
+            <li><form action="/admin"><button type="submit">Inicio</button></form></li>
             <li><form action="/notificar"><button type="submit">Notificar contenido destacado</button></form></li>
             <li><button type="button" onclick="document.getElementById('uploadModal').style.display='block'">Subir Manga</button></li>
             <li><form action="/editarmanga"><button type="submit">Administrar</button></form></li>
             <li><button type="button" onclick="document.getElementById('checkSalesModal').style.display='block'">Comprobar Venta</button></li>
+            <li><form action="/sales"><button type="submit">Ventas</button></form></li>
+            <li>
+                <form action="/logout"><button type="submit">Cerrar sesión</button></form>
+              </li>
         </ul>
     </nav>
     <br>
@@ -34,10 +38,10 @@
             <h3>Manga más vendido</h3>
             <p>{{ most_sold }}</p>
         </div>
-        <div class="sales-item">
+        <!-- <div class="sales-item">
             <h3>Ventas mangas eliminados</h3>
             <p>{{ erased_mangas }}</p>
-        </div>
+        </div> -->
     </div>
     <div id="highlightContent" class="grid-container">
         {% for manga in mangas %}
